@@ -1,6 +1,9 @@
 x2goclient (4.1.0.1-0x2go1) UNRELEASED; urgency=medium
 
-  * Continue development
+  [ Mihai Moldovan ]
+  * New upstream version (4.1.0.1):
+    - src/sshmasterconnection.cpp: use ssh_channel_listen_forward () instead
+      of ssh_forward_listen () for newer libssh versions. Fixes: #870.
 
  -- X2Go Release Manager <git-admin@x2go.org>  Wed, 22 Feb 2017 07:13:10 +0100
 
